# quest_presence

./: .gitignore
XrPresenceTest/: CMakeLists.txt
XrPresenceTest/Projects/Android/: AndroidManifest.xml  CMakeLists.txt  build.gradle  settings.gradle
XrPresenceTest/Src/: main.cpp
XrPresenceTest/res/values/: strings.xml
docs/: problem.md
